making index content dynamic, making posts dynamic

--- a/index.html
+++ b/index.html
@@ -595,88 +595,9 @@
                                                 <div class="sc_section_inner">
                                                     <h2 class="sc_section_title sc_item_title sc_item_title_without_descr">Our Shop<span></span></h2>
                                                     <div class="sc_section_content_wrap">
-                                                        <div class="woocommerce columns-4">
+                                                        <div class="woocommerce columns-4 list_products">
                                                             <ul class="products">
-                                                                <li class="product has-post-thumbnail first instock purchasable">
-                                                                    <div class="post_item_wrap">
-                                                                        <div class="post_featured">
-                                                                            <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
-                                                                                    <img src="images/percorino romano.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
-                                                                                </a>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="post_content">
-                                                                            <h2 class="woocommerce-loop-product__title">Pecorino Romano</h2>
-                                                                            <span class="price">
-                                                                                <span class="woocommerce-Price-amount amount">
-                                                                                    <span class="woocommerce-Price-currencySymbol">&#36;</span>18.90
-                                                                                </span>
-                                                                            </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="471" data-product_sku="" class="button add_to_cart_button">Select options</a>
-                                                                        </div>
-                                                                    </div>
-                                                                </li>
-                                                                <li class="product has-post-thumbnail instock purchasable">
-                                                                    <div class="post_item_wrap">
-                                                                        <div class="post_featured">
-                                                                            <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
-                                                                                    <img src="images/JG10293-glass-milk-bottles_3.webp" class="attachment-shop_catalog size-shop_catalog" alt="" />
-                                                                                </a>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="post_content">
-                                                                            <h2 class="woocommerce-loop-product__title">Evaporated Milk</h2>
-                                                                            <span class="price">
-                                                                                <span class="woocommerce-Price-amount amount">
-                                                                                    <span class="woocommerce-Price-currencySymbol">&#36;</span>4.90
-                                                                                </span>
-                                                                            </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="458" data-product_sku="" class="button add_to_cart_button">Select options</a>
-                                                                        </div>
-                                                                    </div>
-                                                                </li>
-                                                                <li class="product has-post-thumbnail instock purchasable">
-                                                                    <div class="post_item_wrap">
-                                                                        <div class="post_featured">
-                                                                            <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
-                                                                                    <img src="images/images3.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
-                                                                                </a>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="post_content">
-                                                                            <h2 class="woocommerce-loop-product__title">Farm Sour Cream</h2>
-                                                                            <span class="price">
-                                                                                <span class="woocommerce-Price-amount amount">
-                                                                                    <span class="woocommerce-Price-currencySymbol">&#36;</span>12.50
-                                                                                </span>
-                                                                            </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="448" data-product_sku="" class="button add_to_cart_button">Select options</a>
-                                                                        </div>
-                                                                    </div>
-                                                                </li>
-                                                                <li class="product has-post-thumbnail last instock purchasable">
-                                                                    <div class="post_item_wrap">
-                                                                        <div class="post_featured">
-                                                                            <div class="post_thumb">
-                                                                                <a class="hover_icon hover_icon_link" href="single-product.html">
-                                                                                    <img src="images/images4.jpeg" class="attachment-shop_catalog size-shop_catalog" alt="" />
-                                                                                </a>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="post_content">
-                                                                            <h2 class="woocommerce-loop-product__title">Ricotta Salata</h2>
-                                                                            <span class="price">
-                                                                                <span class="woocommerce-Price-amount amount">
-                                                                                    <span class="woocommerce-Price-currencySymbol">&#36;</span>15.99
-                                                                                </span>
-                                                                            </span>
-                                                                            <a rel="nofollow" href="single-product.html" data-quantity="1" data-product_id="438" data-product_sku="" class="button add_to_cart_button">Select options</a>
-                                                                        </div>
-                                                                    </div>
-                                                                </li>
+                                                                <!-- Products will be populated dynamically by `js/index-dynamic.js` using `includes/products_list.php` -->
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -690,28 +611,7 @@
                                 <div class="wpb_column vc_column_container vc_col-sm-12">
                                     <div class="vc_column-inner ">
                                         <div class="wpb_wrapper">
-                                            <div class="columns_wrap sc_columns columns_nofluid sc_columns_count_12 margin_top_small margin_bottom_huge" data-animation="animated fadeInUp normal">
-                                                <div class="column-7_12 sc_column_item sc_column_item_1 odd first span_7">
-                                                    <div class="sc_intro intro_1">
-                                                        <div class="sc_intro_inner  sc_intro_style_2">
-                                                            <div class="sc_intro_content">
-                                                                <h2 class="sc_intro_title">Breakfast Ideas</h2>
-                                                                <div class="sc_intro_descr">Heat up your mornings with a bowl of warm cereal. Whether you prefer oatmeal, farina, or any other kind of porridge, make your instant version a bit creamier!</div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="column-5_12 sc_column_item sc_column_item_8 even span_5">
-                                                    <div class="sc_intro intro_2">
-                                                        <div class="sc_intro_inner  sc_intro_style_2">
-                                                            <div class="sc_intro_content">
-                                                                <h2 class="sc_intro_title">Ice Cream</h2>
-                                                                <div class="sc_intro_descr">Try our low fat, fruitty, caramel, vanilla and chocolate ice cream all made by our best farm cooks!</div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <!-- Promotional boxes removed: replaced by dynamic content. -->
                                         </div>
                                     </div>
                                 </div>
@@ -1229,6 +1129,8 @@
 <script type="text/javascript" src="js/cart-api.js"></script>
 <script type="text/javascript" src="js/mini-cart.js"></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
+<script type='text/javascript' src='js/product-data.js'></script>
+<script type='text/javascript' src='js/index-dynamic.js'></script>
 <script>
 // Year bar pagination logic for index page (#sc_tabs_583)
 document.addEventListener('DOMContentLoaded', function(){
