--- a/about-2.html
+++ b/about-2.html
@@ -855,6 +855,7 @@
 <script type='text/javascript' src='js/cart-api.js'></script>
 <script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
+<script type='text/javascript' src='js/blog-dynamic.js'></script>
 <script>
 // Dynamic year tabs pagination (2017-2025, show 5 at a time)
 document.addEventListener('DOMContentLoaded', function() {
