comments and admin approval

--- a/single-product.html
+++ b/single-product.html
@@ -626,6 +626,7 @@
 <script type='text/javascript' src='js/product-data.js' defer></script>
 <script>window.APP_VERSION = '2025111301';</script>
 <script type='text/javascript' src='js/single-product.js?v=2025111301' defer></script>
+<script type='text/javascript' src='js/custom/product-reviews.js' defer></script>
 <script type='text/javascript' src='js/auth-session.js' defer></script>
 <!-- Title now updated dynamically by single-product.js after API response -->
 
