--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                   <button type="submit">Login</button>
                   <label style="font-size:12px;display:flex;align-items:center;gap:4px;"><input type="checkbox"/> Remember me</label>
                 </div>
-                <div class="small-note"><a href="#">Forgot password?</a></div>
+                <div class="small-note"><a href="request-password-reset.html">Forgot password?</a></div>
               </form>
               <form id="registerForm" class="auth-form" autocomplete="on">
                 <div class="field"><label for="reg_first_name">First Name</label><input id="reg_first_name" name="first_name" type="text" required /></div>
